[*] fix bg lag on firefox

--- a/client/src/Component/Body.css
+++ b/client/src/Component/Body.css
@@ -5,11 +5,5 @@
 
 body {
     background-image: url(./background.svg);
-}
-
-@-moz-document url-prefix(){
-    body {
-        background: url(./background-firefox.png);
-        background-size: cover;
-    }
+    background-repeat: no-repeat;
 }
